# AniSubio-public

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  sync_worker.py
deploy/systemd/: anisubio-review.service
deploy/tmpfiles.d/: anisubio.conf
docs/: architecture.md
src/anisubio/: __init__.py  audit_mappings.py  backup.py  config.py  db.py  main.py  manual_mapping_20260624.py  models.py  priority.py  repair_mappings.py  review_worker.py  schemas.py  sync_worker.py  vacuum_worker.py
src/anisubio/data/: imdb_priority_mal_ids.json  imdb_top_500_anime.json
src/anisubio/services/: archive.py  catalog.py  external_ids.py  importer.py  jobs.py  mapper.py  review_queue.py  source.py
src/anisubio/storage/: __init__.py  base.py  factory.py  local_cache.py  telegram.py
tests/: conftest.py  test_archive.py  test_backup.py  test_bot_api_transport.py  test_catalog.py  test_external_ids.py  test_jobs.py  test_mapper.py  test_mapping_audit.py  test_priority.py  test_protocol.py  test_repair_mappings.py  test_review_queue.py  test_review_worker.py  test_source.py  test_storage.py  test_sync_worker.py  test_telegram_rate_limit.py
