[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anisubio"
version = "0.2.2"
description = "Russian anime subtitles addon for Stremio"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.11,<4",
  "aiohttp-socks>=0.10,<1",
  "beautifulsoup4>=4.12,<5",
  "fastapi>=0.115,<1",
  "filelock>=3.16,<4",
  "httpx>=0.27,<1",
  "pydantic-settings>=2.6,<3",
  "py7zr>=0.22,<1",
  "pysubs2>=1.8,<2",
  "rarfile>=4.2,<5",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
]

[project.scripts]
anisubio-sync = "anisubio.sync_worker:main"
anisubio-backup = "anisubio.backup:main"
anisubio-vacuum = "anisubio.vacuum_worker:main"
anisubio-review = "anisubio.review_worker:main"

[tool.hatch.build.targets.wheel]
packages = ["src/anisubio"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
